--- a/chess/chess.vcxproj.filters
+++ b/chess/chess.vcxproj.filters
@@ -95,9 +95,24 @@
     <ClCompile Include="Utility.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Rook.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="King.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Knight.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Queen.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="CodingConventions.txt">
+      <Filter>Source Files</Filter>
+    </Text>
+    <Text Include="notes.txt">
       <Filter>Source Files</Filter>
     </Text>
   </ItemGroup>
