--- a/chess/chess.vcxproj
+++ b/chess/chess.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="King.cpp" />
     <ClCompile Include="Knight.cpp" />
+    <ClCompile Include="Pawn.cpp" />
     <ClCompile Include="Queen.cpp" />
     <ClCompile Include="Rook.cpp" />
     <ClCompile Include="Source.cpp" />
@@ -151,6 +152,7 @@
   <ItemGroup>
     <Text Include="CodingConventions.txt" />
     <Text Include="notes.txt" />
+    <Text Include="todo.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
