--- a/chess/chess.vcxproj.filters
+++ b/chess/chess.vcxproj.filters
@@ -122,4 +122,7 @@
       <Filter>Source Files</Filter>
     </Text>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
 </Project>
